--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   oauth2: ^2.0.0
   url_launcher: ^6.1.4
   flutter_dotenv: ^5.0.2
+  github: ^9.3.0
 
 dev_dependencies:
   flutter_test:
