--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   url_launcher: ^6.1.4
   flutter_dotenv: ^5.0.2
   github: ^9.3.0
+  fluttericon: ^2.0.0
 
 dev_dependencies:
   flutter_test:
